--- a/src/pages/TodoList/TodoList.css
+++ b/src/pages/TodoList/TodoList.css
@@ -218,6 +218,10 @@ body {
   color: #d9d9d9;
   text-decoration: line-through;
 }
+.todo-list li.editing label {
+  color: #d9d9d9;
+  text-decoration: none;
+}
 
 .todo-list li .destroy {
   display: none;
